--- a/pom.xml
+++ b/pom.xml
@@ -119,13 +119,6 @@
     </dependencies>
 
     <build>
-        <extensions>
-            <extension>
-                <groupId>kr.motd.maven</groupId>
-                <artifactId>os-maven-plugin</artifactId>
-                <version>1.7.1</version>
-            </extension>
-        </extensions>
         <pluginManagement>
             <plugins>
                 <!-- Enforce reproducible builds -->
@@ -227,10 +220,26 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+                <executions>
+                    <!-- 1.3 Detect OS properties for protoc -->
+                    <!-- Not used as an extension since NetBeans doesn't support extensions -->
+                    <!-- Must define os.detected.classifier property in settings so NetBeans can use it -->
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>detect</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
                 <configuration>
-                    <!-- 1.3 Configure protoc -->
+                    <!-- 1.4 Configure protoc -->
                     <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
                 </configuration>
