--- a/jdplus-examples-base/pom.xml
+++ b/jdplus-examples-base/pom.xml
@@ -5,11 +5,11 @@
 
     <parent>
         <groupId>eu.europa.ec.joinup.sat</groupId>
-        <artifactId>jd3-examples</artifactId>
+        <artifactId>jdplus-examples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jd3-examples-base</artifactId>
+    <artifactId>jdplus-examples-base</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -17,6 +17,6 @@
     <url>${project.parent.url}</url>
 
     <modules>
-        <module>jd3-examples-base-parent</module>
+        <module>jdplus-examples-base-parent</module>
     </modules>
 </project>
