--- a/jdplus-examples-desktop/pom.xml
+++ b/jdplus-examples-desktop/pom.xml
@@ -5,11 +5,11 @@
 
     <parent>
         <groupId>eu.europa.ec.joinup.sat</groupId>
-        <artifactId>jd3-examples</artifactId>
+        <artifactId>jdplus-examples</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jd3-examples-cli</artifactId>
+    <artifactId>jdplus-examples-desktop</artifactId>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
