--- a/pom.xml
+++ b/pom.xml
@@ -546,7 +546,7 @@
 
     <repositories>
         <repository>
-            <id>ossrh-snapshots</id>
+            <id>jdemetra-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
             <releases>
                 <enabled>false</enabled>
