--- a/pom.xml
+++ b/pom.xml
@@ -291,6 +291,7 @@
                 <configuration>
                     <!-- 1.6 Configure Git branching model -->
                     <gitFlowConfig>
+                        <productionBranch>main</productionBranch>
                         <versionTagPrefix>v</versionTagPrefix>
                     </gitFlowConfig>
                 </configuration>
