High frequency examples

--- a/jdplus-examples-base/jdplus-examples-base-parent/jdplus-examples-base-core/pom.xml
+++ b/jdplus-examples-base/jdplus-examples-base-parent/jdplus-examples-base-core/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>jdplus-sts-base-core</artifactId>
             <version>${jdplus-sts.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.europa.ec.joinup.sat</groupId>
+            <artifactId>jdplus-highfreq-base-core</artifactId>
+            <version>${jdplus-highfreq.version}</version>
+        </dependency>
         <!-- < modules v2 -->
         <dependency>
             <groupId>eu.europa.ec.joinup.sat</groupId>
