--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,8 @@
         <jd2.version>2.2.4</jd2.version>
         <jdplus-main.version>3.0.2</jdplus-main.version>
         <jdplus-benchmarking.version>1.0.0-SNAPSHOT</jdplus-benchmarking.version>
-        <jdplus-sts.version>1.0.0-SNAPSHOT</jdplus-sts.version>
+        <jdplus-sts.version>1.0.0</jdplus-sts.version>
+        <jdplus-highfreq.version>1.0.0</jdplus-highfreq.version>
         <protobuf.version>3.21.12</protobuf.version>
     </properties>
 
