--- a/pom.xml
+++ b/pom.xml
@@ -334,6 +334,7 @@
                                     <version>3.6.0</version>
                                 </requireMavenVersion>
                                 <requireNoRepositories>
+                                    <allowedRepositories>central</allowedRepositories>
                                     <allowSnapshotRepositories>true</allowSnapshotRepositories>
                                 </requireNoRepositories>
                                 <requirePluginVersions/>
@@ -551,7 +552,16 @@
         </profile>
     </profiles>
 
+    <!-- Custom repositories: order matters! -->
+    <!-- Maven Central is enforced at top to prevent dependabot to use snapshots as releases -->
     <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>jdemetra-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
