--- a/jdplus-examples-desktop/pom.xml
+++ b/jdplus-examples-desktop/pom.xml
@@ -12,10 +12,72 @@
     <artifactId>jdplus-examples-desktop</artifactId>
     <packaging>pom</packaging>
 
-    <name>${project.artifactId}</name>
-    <description>${project.parent.artifactId} - ${project.artifactId}</description>
-    <url>${project.parent.url}</url>
+    <name>jdplus-examples-desktop</name>
+
+    <properties>
+        <!-- dependencies -->
+        <netbeans.version>RELEASE190</netbeans.version>
+    </properties>
 
     <modules>
+        <module>jdplus-examples-desktop-plugin</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!-- Other plugins -->
+                <plugin>
+                    <groupId>org.apache.netbeans.utilities</groupId>
+                    <artifactId>nbm-maven-plugin</artifactId>
+                    <version>4.8</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <!-- Force lookup of annotation processors in classpath by resetting paths -->
+                    <annotationProcessorPaths combine.self="override"/>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <!-- Force use of the nbm generated manifest -->
+                    <archive>
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.netbeans.utilities</groupId>
+                <artifactId>nbm-maven-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <!-- Set branding for all NBM plugins -->
+                    <useOSGiDependencies>false</useOSGiDependencies>
+                    <!--                    <brandingToken>${brandingToken}</brandingToken>-->
+                    <!--                    <cluster>${brandingToken}</cluster>-->
+                </configuration>
+                <executions>
+                    <execution>
+                        <!-- List runtime dependencies for tests -->
+                        <id>list-runtime-dependencies</id>
+                        <phase>generate-test-resources</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                        <configuration>
+                            <targetManifestFile>${project.build.testOutputDirectory}/runtime-dependencies.mf</targetManifestFile>
+                            <verifyRuntime>skip</verifyRuntime>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
