Fix dependency convergence

--- a/jdplus-examples-base/jdplus-examples-base-parent/jdplus-examples-base-core/pom.xml
+++ b/jdplus-examples-base/jdplus-examples-base-parent/jdplus-examples-base-core/pom.xml
@@ -48,6 +48,16 @@
             <groupId>eu.europa.ec.joinup.sat</groupId>
             <artifactId>jdplus-benchmarking-base-core</artifactId>
             <version>${jdplus-benchmarking.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>jdplus-toolkit-base-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>jdplus-toolkit-base-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>eu.europa.ec.joinup.sat</groupId>
